# chessifier

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_TRANSLATIONS.md  Dockerfile  README.md  SECURITY.md  biome.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: prerelease.yml  release.yml  test.yml
scripts/: readme-updater.ts  update-missing-translations.ts  update-version.ts
src/: App.tsx  index.tsx  routeTree.gen.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: chess.rs  error.rs  fs.rs  main.rs  oauth.rs  opening.rs  package_manager.rs  pgn.rs  puzzle.rs  telemetry.rs
src-tauri/src/db/: core.rs  encoding.rs  mod.rs  models.rs  pgn.rs  search.rs  supabase_setup.sql
src/bindings/: generated.ts
src/chessground/: Chessground.tsx
src/common/components/: AccountCards.tsx  Comment.tsx  CompleteMoveCell.tsx  EvalChart.tsx  GameInfo.tsx  GameNotation.css.ts  GameNotation.tsx  GenericCard.css.ts  GenericCard.tsx  MoveControls.tsx  OpenFolderButton.tsx  OpeningName.tsx  Piece.tsx  ProgressButton.tsx  ProgressButtonWithOutState.tsx  Sidebar.module.css  Sidebar.tsx  TopBar.css.ts  TopBar.tsx  TreeStateContext.tsx
src/common/hooks/: useTelemetry.ts
src/components/: About.tsx  ErrorComponent.tsx  Sidebar.tsx  TopBar.css.ts  TopBar.tsx
src/components/boards/: Board.tsx  BoardAnalysis.tsx  BoardGame.tsx  EditingCard.tsx  EvalBar.tsx  EvalListener.tsx  MoveInput.tsx  PiecesGrid.tsx  PromotionModal.tsx
src/components/common/: AccountCards.tsx  Comment.tsx  CompleteMoveCell.tsx  GameInfo.tsx  GameNotation.css.ts  GameNotation.tsx  GenericCard.css.ts  GenericCard.tsx  MoveCell.tsx  MoveControls.tsx  OpenFolderButton.tsx  OpeningName.tsx  ProgressButton.tsx  ShowMaterial.tsx  TimeInput.tsx  TreeStateContext.tsx
src/components/databases/: AddDatabase.tsx  ConvertButton.tsx  DatabaseView.tsx  DatabaseViewStateContext.ts  DatabasesPage.tsx  FideInfo.tsx  GameCard.tsx  GamePreview.tsx  GameTable.tsx  GridLayout.tsx  PlayerCard.tsx  PlayerTable.tsx  TournamentCard.tsx  TournamentTable.tsx
src/components/engines/: AddEngine.tsx  EngineForm.tsx  EnginesPage.tsx
src/components/files/: DirectoryTable.tsx  FileCard.tsx  FilesPage.tsx  Modals.tsx  opening.ts
src/components/home/: AccountCard.module.css  AccountCard.tsx  Accounts.tsx  Databases.tsx  HomePage.tsx  PersonalCard.tsx  styles.css.ts
src/components/puzzles/: AddPuzzle.tsx  PuzzleBoard.tsx  Puzzles.tsx
src/components/settings/: BoardSelect.tsx  ColorControl.tsx  KeybindInput.tsx  KeyboardShortcuts.tsx  PiecesSelect.tsx  SettingsPage.tsx  ThemeButton.tsx
src/components/tabs/: BoardTab.css.ts  BoardsPage.tsx  BoardsPageTabs.tsx  ConfirmChangesModal.tsx  ContentEditable.tsx  ImportModal.tsx  NewTabHome.tsx
src/features/accounts/: AccountsPage.tsx
src/features/boards/: BoardsPage.tsx
src/features/dashboard/: DashboardPage.tsx
src/features/databases/: DatabaseView.tsx  DatabasesPage.tsx
src/features/engines/: EnginesPage.tsx
src/features/files/: FilesPage.tsx
src/features/home/: HomePage.tsx
src/features/learn/: LearnPage.tsx  LessonsPage.tsx  PracticePage.tsx
src/features/settings/: KeyboardShortcutsPage.tsx  SettingsPage.css.ts  SettingsPage.tsx
src/hooks/: useTelemetry.ts
src/routes/: __root.tsx  accounts.tsx  boards.tsx  engines.tsx  files.tsx  index.tsx
src/routes/databases/: $databaseId.tsx  index.tsx
src/routes/learn/: index.tsx  lessons.tsx  practice.tsx  route.tsx
src/routes/settings/: index.tsx  keyboard-shortcuts.tsx  route.tsx
src/state/: atoms.ts  keybindings.ts  keybinds.ts  store.ts  userStatsStore.ts  utils.ts
src/state/store/: database.ts  tree.ts
src/styles/: Chessboard.css.ts  chessgroundColorsOverride.css  global.css.ts
src/themes/: classic-dark.ts  classic-light.ts  css.ts  hooks.ts  index.ts  mantine-bridge.ts  registry.ts  state.ts  types.ts
src/themes/components/: EnhancedThemeButton.tsx  ThemeDebugger.tsx  ThemeEditor.tsx  ThemeProvider.tsx  ThemeSelector.tsx  ThemeSettings.tsx  index.ts
src/translation/: am_AM.ts  be_BY.ts  de_DE.ts  en_US.ts  es_ES.ts  fr_FR.ts  hy_AM.ts  it_IT.ts  ja_JP.ts  nb_NO.ts  pl_PL.ts  pt_PT.ts  ru_RU.ts  tr_TR.ts  uk_UA.ts  zh_CN.ts
src/translation/missing/: am_AM.json  de_DE.json  es_ES.json  fr_FR.json  hy_AM.json  it_IT.json  ja_JP.json  nb_NO.json  pl_PL.json  pt_PT.json  ru_RU.json  tr_TR.json  uk_UA.json
src/utils/: achievements.ts  annotation.ts  applyUciMoveToFen.ts  checkmateDetection.ts  chess-engine.ts  chess.ts  chessops.ts  clock.ts  dailyGoals.ts  db.ts  engineInstallation.ts  engines.ts  files.ts  format.ts  gameRecords.ts  logger.ts  misc.ts  packageManager.ts  puzzleStreak.ts  puzzles.ts  repertoire.ts  score.ts  sound.ts  tabs.ts  timeControl.ts  treeReducer.ts
src/utils/chess.com/: api.tsx  tcn.ts
src/utils/chessdb/: api.ts
(+162 files in other folders)
