[package]
name = "pawn-appetit"
version = "0.4.0-alpha"
description = "A Modern Chess Database"
authors = ["ChessKitchen Team"]
license = "GPL-3.0-only"
repository = "https://github.com/ChessKitchen/pawn-appetit"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.8.2", features = ["protocol-asset"] }
zip = "2.4.2"
tokio = { version = "1.47", features = ["full"] }
futures-util = "0.3.31"
reqwest = { version = "0.12.23", features = ["stream", "blocking", "json"] }
shakmaty = "0.27.3"
pgn-reader = "0.26.0"
csv = "1.3.1"
lazy_static = "1.5.0"
btoi = "0.4.3"
rusqlite = { version = "0.28.0", features = ["bundled"] }
bzip2 = "0.4.4"
zstd = "0.13"
diesel = { version = "2.2.12", features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
    "r2d2",
] }
rayon = "1.11.0"
chrono = "0.4.41"
derivative = "2.2.0"
dashmap = "6.1.0"
once_cell = "1.21.3"
rand = "0.8.5"
vampirc-uci = { git = "https://github.com/ChessKitchen/vampirc-uci.git", rev = "5d0ee12d5804d71c9eec6132325b9ac6d72a022a", features = [
    "specta",
    "serde",
] }
tempfile = "3.21.0"
quick-xml = { version = "0.31.0", features = ["serialize"] }
specta = { version = "^2.0.0-rc.20", features = ["derive"] }
tauri-specta = { version = "^2.0.0-rc.20", features = ["derive", "typescript"] }
strsim = "0.11.1"
bincode = "2.0.1"
thiserror = "1.0.69"
log = "0.4.27"
oauth2 = "4.4.2"
axum = "0.6.20"
tar = "0.4.44"
sysinfo = "0.29.11"
governor = "0.6.3"
nonzero_ext = "0.3.0"
specta-typescript = "0.0.7"
tauri-plugin-shell = "2.3.0"
tauri-plugin-http = "2.5.2"
tauri-plugin-fs = "2.4.2"
tauri-plugin-dialog = "2.3.3"
tauri-plugin-os = "2.3.1"
tauri-plugin-cli = "2.4.0"
tauri-plugin-updater = "2.9.0"
tauri-plugin-process = "2"
tauri-plugin-log = "2"
tauri-plugin-window-state = "2"
tauri-plugin-opener = "2"
regex = "1.11.1"
postgrest = "1.6"
uuid = { version = "1.18.0", features = ["v4"] }
fs_extra = "1.3.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
